# backend

./: .env  Cargo.toml  README.md
.sqlx/: query-19c7077a203ec2ef4ae403d103235af27ea5d4edd8d6a16ecd4aa90c4caafb2f.json  query-1babe1f08babdf3d609d7f52a431aa5f1f8f8a03a95e13ef9df90977bc090db5.json  query-24fb16b8f754a0a24ab3f8e01fc95dc2ac14c2ca7cf23265419b15ccae21de47.json  query-3821c63781ff3abf2513b7c62fffb8ffcbcd509501d37761d6552d8eef1ddd5c.json  query-3d2feae7a08cde864965fb3cb18049dccbec94a78cb779297ba72c6168d90139.json  query-4943fe4054ce0022d6e84187b724b9f8fcf8e96528ac30a1ba73f1b173727728.json  query-5999f3f6eea09247be273bd49d64ed1306c2cb4d7f7515353aa3638eaf7503bf.json  query-669217a592587709ae67bd9cb4942b02c9d85eaacf84b8e481452107ce1e64c0.json  query-6b260430720e7f9167ef79b4b3b7ff1bf7375d9b97e04ac0c93cc5b707ca3ad6.json  query-712f8c224ad632c7670b06b8b4cd098d098c376e30a199719c61f2b11710e56f.json  query-78766a0c81d1f2ff9c8890ac77cba951de6a198fd8eeca76808008a62dfe14a8.json  query-8c61b0de293b4a9ca2df20a67ca9129d02ef5baaa4bd50aa9cb12921627a4763.json  query-a343313a065a93aa38070e42769b8f4108a784fc4e49b39b2b1f44d7ce9043bc.json  query-ccbafce8926347e6f1fe91fc4f10fcd388758fdd8b76627aa5ba2fd24ed21a75.json  query-ff081783b5c9ac63b3b3bc09fc772b94f184075213d7eb432848b8d55a08a909.json
analysis-svc/: Cargo.toml
analysis-svc/src/: main.rs  whisper.rs
dev-db/: .gitignore  Makefile  compose.yaml
dev-db/garage/: config.toml
dev-db/garage/data/: .gitignore
migrations/: 20251204060723_initial.sql  20251208084932_segments.sql  20251208084932_utterances.sql  20251209134211_status.sql  20251214212318_recording_stats.sql  20251227142857_add_status_kind_field.sql  20251229003532_add_transcript_storage.sql
src/: analysis_submit.rs  main.rs  result.rs  sample_metrics.json  upload.rs  url.rs
src/endpoints/: channel.rs  mod.rs  recording.rs  segment.rs  upload.rs  utterance.rs
src/message_queue/: mod.rs  types.rs
