[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
rust-s3 = "0.37.0"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "sqlite", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util", "tokio-util"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
