[workspace]
members = [
    ".",
    "analysis-svc",
]

[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
axum-extra = "0.12.2"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
rdkafka = { version = "0.38.0", features = ["tracing"] }
rust-s3 = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util", "tokio-util"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
