[package]
name = "analysis-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
eyre = "0.6.12"
fork = "0.6.0"
ipc-channel = "0.20.2"
libc = "0.2.178"
pyo3 = { version = "0.27.2", features = ["eyre"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
